--- a/app/src/main/res/layout/activity_join.xml
+++ b/app/src/main/res/layout/activity_join.xml
@@ -198,17 +198,16 @@
             android:padding="17dp"
             android:background="@drawable/button_login" />
 
-        <Button
+        <TextView
             android:id="@+id/id_toLogin"
-            android:layout_width="match_parent"
-            android:layout_height="20dp"
-            android:background="@drawable/bottomline_button"
-            android:stateListAnimator="@null"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="30dp"
             android:text="@string/loginButton"
             android:textColor="@color/dark_gray"
-            android:layout_marginStart="180dp"
-            android:layout_marginEnd="180dp"
-            android:layout_marginBottom="80dp"
+
             android:textSize="11sp" />
 
     </LinearLayout>
