--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -58,4 +58,15 @@
         android:textSize="10sp"
         android:clickable="true"/>
 
+    <TextView
+        android:id="@+id/developer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="180dp"
+        android:text="@string/developer"
+        android:textSize="12dp"
+        android:textAlignment="center"
+        android:textColor="@color/gray" />
+
 </LinearLayout>
