--- a/app/src/main/res/layout/image_recycler.xml
+++ b/app/src/main/res/layout/image_recycler.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/putImage"
-        android:layout_width="match_parent"
+        android:layout_width="183dp"
         android:layout_height="match_parent"
-        android:src="@drawable/ic_launcher_foreground"/>
+        android:layout_gravity="center"/>
 
 </FrameLayout>
