--- a/app/src/main/res/layout/activity_additem.xml
+++ b/app/src/main/res/layout/activity_additem.xml
@@ -4,35 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="15dp"
     android:orientation="vertical"
-    tools:context=".AddItemFrag">
+    tools:context=".AddItem">
 
-    <Button
-        android:id="@+id/savebutton"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/mp_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginBottom="76dp"
-        android:backgroundTint="#EABADB"
-        android:text="저장하기"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Theme.MP202129"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="#BD87BB">
+
+        <TextView
+            android:id="@+id/mp_toolbar_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#BD87BB"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageButton
         android:id="@+id/selectImageBtn"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@color/white"
         android:contentDescription="@string/camera"
-        android:padding="10dp"
+        android:padding="5dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mp_toolbar"
         app:srcCompat="@drawable/camera"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -41,7 +52,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="?android:attr/listDivider"
         app:layout_constraintTop_toBottomOf="@+id/selectImageBtn"
         tools:layout_editor_absoluteX="20dp" />
@@ -140,7 +151,7 @@
         android:layout_marginHorizontal="20dp"
         android:background="@null"
         android:gravity="top"
-        android:hint="상품 설명"
+        android:hint="게시글 내용을 작성해주세요."
         android:inputType="textMultiLine"
         android:paddingHorizontal="10dp"
         android:paddingTop="10dp"
