--- a/app/src/main/res/layout/activity_addpromotion.xml
+++ b/app/src/main/res/layout/activity_addpromotion.xml
@@ -4,35 +4,46 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="15dp"
     android:orientation="vertical"
     tools:context=".AddItem">
 
-    <Button
-        android:id="@+id/savebutton"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/mp_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:layout_marginBottom="76dp"
-        android:backgroundTint="#EABADB"
-        android:text="저장하기"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/toolbar"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/Theme.MP202129"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="#BD87BB">
+
+        <TextView
+            android:id="@+id/mp_toolbar_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="#BD87BB"
+            android:textSize="20sp"
+            android:textStyle="bold" />
+    </androidx.appcompat.widget.Toolbar>
 
     <ImageButton
         android:id="@+id/selectImageBtn"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="15dp"
         android:background="@color/white"
         android:contentDescription="@string/camera"
-        android:padding="10dp"
+        android:padding="5dp"
         android:scaleType="fitXY"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mp_toolbar"
         app:srcCompat="@drawable/camera"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -59,21 +70,9 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/divider2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider" />
-
-    <View
-        android:id="@+id/divider2"
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_marginHorizontal="20dp"
-        android:background="?android:attr/listDivider"
-        app:layout_constraintBottom_toTopOf="@+id/booth_location"
-        app:layout_constraintEnd_toEndOf="@+id/booth_name"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="@+id/booth_name"
-        app:layout_constraintTop_toBottomOf="@+id/booth_name" />
 
     <EditText
         android:id="@+id/booth_location"
@@ -88,12 +87,12 @@
         android:textSize="15sp"
         app:layout_constraintBottom_toTopOf="@+id/divider3"
         app:layout_constraintEnd_toEndOf="@+id/booth_name"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/booth_name"
         app:layout_constraintTop_toBottomOf="@+id/divider2" />
 
     <View
-        android:id="@+id/divider3"
+        android:id="@+id/divider2"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginHorizontal="20dp"
@@ -101,6 +100,18 @@
         app:layout_constraintBottom_toTopOf="@+id/booth_location"
         app:layout_constraintEnd_toEndOf="@+id/booth_name"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="@+id/booth_name"
+        app:layout_constraintTop_toBottomOf="@+id/booth_name" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginHorizontal="20dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toTopOf="@+id/booth_time"
+        app:layout_constraintEnd_toEndOf="@+id/booth_name"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/booth_name"
         app:layout_constraintTop_toBottomOf="@+id/booth_location" />
 
