--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="dark_gray">#2B2B2B</color>
     <color name="gray">#FF808080</color>
     <color name="red">#FF0000</color>
+    <color name="textTop_low_opacity">#20BD87BB</color>
 </resources>
